6.1.3 fixing errors recently introduced - could not edit, could not hide entries, goals were shown twice on mobile

--- a/src/app/editable-table/editable-table.component.css
+++ b/src/app/editable-table/editable-table.component.css
@@ -1,10 +1,10 @@
 @media screen and (min-height: 200px) { /* Designed for iPhone 11 */
   table {font-size: 10px; padding: 0 5px;}
-  table tr th input, table tr td input {width: 25px; height: 100%; font-size: 10px;}
+  table tr th input, table tr td input {width: 25px; min-height: 10px; height: 100%; font-size: 10px;}
 }
 @media screen and (min-height: 900px) { /* Designed for desktop */
   table {font-size: 15px; padding: 5px 5px;}
-  table tr th input, table tr td input {width: 70px; height: 100%; font-size: 15px;}
+  table tr th input, table tr td input {width: 70px; min-height: 10px; height: 100%; font-size: 15px;}
 }
 
 table, th, td {
